--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.jasko</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4-SNAPSHOT</version>
     <modules>
         <module>pet-clinic-data</module>
         <module>pet-clinic-web</module>
@@ -48,6 +48,6 @@
         <developerConnection>
             scm:git:https://github.com/Sejver/sfg-pet-clinic.git
         </developerConnection>
-      <tag>sfg-pet-clinic-0.0.3</tag>
+      <tag>HEAD</tag>
   </scm>
 </project>
