--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -36,6 +36,12 @@
         <artifactId>spring-boot-starter-test</artifactId>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>com.jasko</groupId>
+        <artifactId>pet-clinic-data</artifactId>
+        <version>0.0.5-SNAPSHOT</version>
+        <scope>compile</scope>
+    </dependency>
 </dependencies>
 <build>
     <plugins>
